# boglang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
code/: hello.asm  hello.glp
src/: main.cpp
